--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -23,6 +23,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "firebase": "^7.14.4",
     "moment": "^2.25.3",
     "node-sass": "^4.14.1",
     "normalize.css": "7.0.0",
@@ -36,6 +37,8 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.3.0",
     "redux": "3.7.2",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "7.0.0",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
@@ -43,6 +46,8 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
