--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^7.14.4",
+    "history": "^4.10.1",
     "moment": "^2.25.3",
     "node-sass": "^4.14.1",
     "normalize.css": "7.0.0",
